# Red-Cell-C2

./: .gitignore  .maintenance-progress.json  AGENTS.md  AGENT_SCORECARD.md  CLAUDE.md  CLAUDE_ARCH_PROMPT.md  CLAUDE_DEV_PROMPT.md  CLAUDE_PROMPT.md  CODEX_ARCH_PROMPT.md  CODEX_PROMPT.md  CODEX_QA_PROMPT.md  CODEX_TEST_PROMPT.md  CURSOR_PROMPT.md  Cargo.toml  HAVOC_ATTRIBUTION.md  README.md  SECURITY.md  claude_arch_loop.sh  claude_dev_loop.sh  claude_loop.sh  claude_test_loop.sh  clippy.toml  codex_loop.sh  cursor_loop.sh  disable-reboot.sh  install.sh  libnull.rlib  logrotate-setup.sh  loop.py  loop.sh  oomd-setup.sh  setup.sh  todo.txt
agent/archon/: AGENT.md  CMakeLists.txt  README.md
agent/archon/include/: Demon.h
agent/archon/src/: Demon.c
agent/archon/tests/: .gitignore  Makefile  replay_harness.c  test_amsi_etw.c  test_cronos.c  test_crypto  test_crypto.c  test_doh_transport  test_doh_transport.c  test_ecdh_init  test_ecdh_init.c  test_heap_enc  test_heap_enc.c  test_ja3.c  test_module_stomp.c  test_pe_header_erase  test_pe_header_erase.c  test_synth_stack  test_synth_stack.c  test_tp_callback.c  test_transport_http_helpers.c
agent/phantom/: Cargo.toml  GAP_ANALYSIS.md  README.md  build.rs
agent/phantom/src/: agent.rs  command.rs  config.rs  ecdh.rs  error.rs  kerberos.rs  lib.rs  main.rs  parser.rs  protocol.rs  sleep_obfuscate.rs  transport.rs
agent/phantom/tests/: e2e_integration.rs  init_callback_flow.rs  versioned_init_secret.rs
agent/specter/: AGENT.md  Cargo.toml  GAP_ANALYSIS.md  README.md  build.rs
agent/specter/csrc/: bof_printf.c
agent/specter/src/: agent.rs  beacon_api.rs  bof_context.rs  bypass.rs  coffeeldr.rs  coffeeldr_tests.rs  config.rs  dispatch.rs  doh_transport.rs  dotnet.rs  download.rs  ecdh.rs  error.rs  job.rs  kerberos.rs  lib.rs  main.rs  metadata.rs  pe_stomp.rs  pivot.rs  platform.rs  protocol.rs  sleep_obf.rs  socket.rs  socket_tests.rs  spoof.rs  syscall.rs  token.rs  token_tests.rs  transport.rs
agent/specter/tests/: e2e_integration.rs  init_callback_flow.rs  versioned_init_secret.rs
client/: Cargo.toml  OPERATOR_SECURITY.md
client-cli/: Cargo.toml
client-cli/src/: agent_id.rs  backoff.rs  bootstrap.rs  cli.rs  client.rs  config.rs  defaults.rs  dispatch.rs  error.rs  main.rs  output.rs  tls.rs  util.rs
client-cli/src/cli/: agent.rs  audit.rs  listener.rs  loot.rs  mod.rs  operator.rs  payload.rs  profile.rs  server.rs
client-cli/src/client/: http.rs  mod.rs
client-cli/src/commands/: agent.rs  audit.rs  listener.rs  login.rs  loot.rs  mod.rs  operator.rs  payload.rs  profile.rs  session.rs  status.rs  types.rs
client-cli/src/config/: discovery.rs  file.rs  mod.rs  permissions.rs  resolve.rs  tests.rs  types.rs
client-cli/src/tests/: agent.rs  bare_invocation.rs  completion.rs  global_flags.rs  help_contract.rs  listener.rs  log_command.rs  loot.rs  mod.rs  payload.rs  profile.rs  rbac.rs  server.rs
client-cli/target-pkvbc/: .rustc_info.json
client-cli/tests/: agent_api_contract.rs  audit_api_contract.rs  cli_binary.rs  e2e_roundtrip.rs  operator_api_contract.rs  payload_api_contract.rs  rbac_api_contract.rs  session_api_contract.rs
client/src/: app.rs  bootstrap.rs  error.rs  helpers.rs  known_servers.rs  known_servers_ui.rs  lib.rs  local_config.rs  logging.rs  login.rs  login_flow.rs  main.rs  main_tests.rs  python.rs  state.rs  tasks.rs  theme.rs  tls.rs  transport.rs
client/src/actions/: console.rs  file_browser.rs  mod.rs  process.rs
client/src/helpers/: clipboard.rs  (+3 more)
client/tests/: login_persistence.rs  public_api.rs
common/: Cargo.toml
common/fuzz/: Cargo.toml
common/src/: agent_protocol.rs  callback_seq.rs  config.rs  corpus.rs  crypto.rs  demon.rs  domain.rs  error.rs  lib.rs  operator.rs  payload_manifest.rs  tls.rs
common/tests/: demon.rs  public_api.rs  tls.rs
crates/client/: Cargo.toml
crates/common/: Cargo.toml
crates/teamserver/: Cargo.toml
teamserver/: Cargo.toml  build.rs
teamserver/migrations/: 20260309183500_init.sql  20260309201500_agent_note.sql  20260311134000_runtime_operators.sql  20260312113000_runtime_operator_password_verifier.sql  20260315120000_agent_process_path.sql  20260315130000_agent_os_build.sql  20260315140000_audit_log_indexes.sql  20260323100000_agent_legacy_ctr.sql  20260323110000_payload_builds.sql  20260403100000_payload_build_agent_type.sql  20260403110000_agent_last_seen_seq.sql  20260405120000_agent_groups_and_listener_access.sql  20260407100000_agent_key_encryption.sql  20260419120000_archon_magic.sql  20260419130000_ecdh_sessions.sql  20260419140000_ecdh_session_seq_num.sql  20260419150000_payload_build_export_name.sql  20260430100000_ecdh_reg_nonces.sql  20260501100000_agent_replay_lockout.sql
teamserver/src/: agent_events.rs  agent_liveness.rs  agents.rs  api.rs  app.rs  audit.rs  auth.rs  corpus_capture.rs  database.rs  demon.rs  dispatch.rs  events.rs  lib.rs  listeners.rs  logging.rs  main.rs  main_tests.rs  metrics.rs  normalize.rs  payload_builder.rs  plugins.rs  preflight.rs  rate_limiter.rs  rbac.rs  service.rs  session_ws.rs  shutdown.rs  sockets.rs  webhook.rs  websocket.rs
teamserver/tests/: agent_deletion_cleanup.rs  agent_liveness_timeout.rs  api_key_auth.rs  archon_magic_rejection.rs  assembly_dispatch.rs  auth_audit_trail.rs  c_agent_replay.rs  callback_framing.rs  ctr_offset_persistence.rs  database.rs  database_agents.rs  database_audit.rs  database_common.rs  database_listeners.rs  database_loot.rs  database_operators.rs  dns_lifecycle.rs  dns_listener_pipeline.rs  e2e_operator_agent_session.rs  ecdh_conformance.rs  ecdh_transport_reload.rs  external_lifecycle.rs  external_listener_pipeline.rs  filesystem_dispatch.rs  fixture_builder_validation.rs  havoc_compatibility.rs  http_lifecycle.rs  http_lifecycle_concurrency.rs  http_lifecycle_restore.rs  http_lifecycle_time_gates.rs  http_lifecycle_update.rs  http_listener_pipeline.rs  listener_lifecycle.rs  load_and_chaos.rs  malformed_demon_packets.rs  mock_demon_agent_checkin.rs  monotonic_ctr_checkin.rs  net_dispatch.rs  output_dispatch.rs  output_dispatch_basic.rs  (+15 more)
(+1905 files in other folders)
