[workspace]
members = [
    "crates/common",
    "crates/teamserver",
    "crates/client",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/michel/Red-Cell-C2"
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
