[package]
name = "red-cell-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "red-cell-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
dirs = "5"
red-cell-common = { path = "../common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8" }
red-cell = { path = "../teamserver" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1.45", features = ["test-util"] }
tower = { version = "0.5" }
wiremock = "0.6"

[lints]
workspace = true
