[package]
name = "red-cell-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "red-cell-cli"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
csv = "1.3"
dirs = "5"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
red-cell-common = { path = "../common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyline = { version = "14", default-features = false, features = ["with-file-history"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
x509-parser = "0.18"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8" }
bytes = "1"
http = "1"
red-cell = { path = "../teamserver" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1.45", features = ["test-util"] }
tower = { version = "0.5" }
wiremock = "0.6"

[lints]
workspace = true
