[package]
name = "red-cell-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
egui_extras = { version = "0.32.1", features = ["image"] }
eframe = "0.32.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
futures-util = "0.3"
pyo3 = { version = "0.23", features = ["abi3-py310"] }
red-cell-common = { path = "../common" }
rfd = "0.15"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
zeroize = { version = "1", features = ["derive"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
webpki-roots = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
