[package]
name = "red-cell-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
cipher = "0.4"
ctr = "0.9"
getrandom = "0.3"
zeroize = { version = "1", features = ["derive", "serde"] }
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hcl = { package = "hcl-rs", version = "0.19.4" }
rcgen = { version = "0.14.7", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio-rustls = "0.26.4"
tracing = "0.1"
utoipa = "5.4"
x509-parser = "0.18"

[dev-dependencies]
hex-literal = "1.0"
tempfile = "3.20"
