[package]
name = "phantom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust Linux agent scaffold for Red Cell C2 with Demon-compatible transport primitives"

[features]
integration = []

[[bin]]
name = "phantom"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1"
rand = "0.9"
red-cell-common = { path = "../../common" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
time = { version = "0.3", features = ["local-offset"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
