[package]
name = "phantom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust Linux agent scaffold for Red Cell C2 with Demon-compatible transport primitives"

[[bin]]
name = "phantom"
path = "src/main.rs"

[lints.rust]
# Process injection (ptrace, mmap, dlsym) requires unsafe.
unsafe_code = "allow"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1"
libc = "0.2"
rand = "0.9"
red-cell-common = { path = "../../common" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
time = { version = "0.3", features = ["local-offset"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
red-cell = { path = "../../teamserver", features = ["test-helpers"] }
red-cell-common = { path = "../../common" }
serde_json = "1.0"
tempfile = "3"
tokio-tungstenite = "0.26"
