[package]
name = "specter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust rewrite of the Demon agent — full protocol and feature parity with the original"

[[bin]]
name = "specter"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
red-cell-common = { path = "../../common" }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rand = "0.9"
anyhow = "1"

[dev-dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3"
red-cell = { path = "../../teamserver", features = ["test-helpers"] }
red-cell-common = { path = "../../common" }
serde_json = "1.0"
tokio-tungstenite = "0.26"
