[package]
name = "specter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust rewrite of the Demon agent — full protocol and feature parity with the original"

[[bin]]
name = "specter"
path = "src/main.rs"

[lints.rust]
# Windows-specific platform helpers require unsafe Win32 FFI calls.
# Changed from "forbid" so individual modules may opt in with #[allow(unsafe_code)].
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[dependencies]
red-cell-common = { path = "../../common" }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rand = "0.9"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
# Win32 API bindings for Windows-native metadata collection, token ops, etc.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[dev-dependencies]
rcgen = "0.13"
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3"
red-cell = { path = "../../teamserver", features = ["test-helpers"] }
red-cell-common = { path = "../../common" }
serde_json = "1.0"
tokio-tungstenite = "0.26"
