[package]
name = "red-cell-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
eframe = "0.32.3"
futures-util = "0.3"
red-cell-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
