[package]
name = "red-cell-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hcl = { package = "hcl-rs", version = "0.19.4" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
