[package]
name = "red-cell-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
getrandom = "0.3"
hcl = { package = "hcl-rs", version = "0.19.4" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
hex-literal = "1.0"
