[package]
name = "red-cell-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
getrandom = "0.3"
hcl = { package = "hcl-rs", version = "0.19.4" }
rcgen = { version = "0.14.7", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio-rustls = "0.26.4"

[dev-dependencies]
hex-literal = "1.0"
tempfile = "3.20"
x509-parser = "0.18"
