[package]
name = "red-cell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive"] }
red-cell-common = { path = "../common" }
serde_json = "1.0"
sha3 = "0.10"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
