[package]
name = "red-cell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hmac = "0.12"
interprocess = { version = "2.4.0", features = ["tokio"] }
red-cell-common = { path = "../common" }
pyo3 = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
subtle = "2.6"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.45", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tempfile = "3.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
